[tool.poetry]
name = "trainee-qa-auto-engine2d"
version = "0.1.0"
description = ""
authors = ["Roman Satymbaev <konev9494@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.8"
pygame = '2.5.2'
pytest = '7.4.2'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
